--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,3 +12,23 @@
 #         uses: ./.github/actions/hello-world
 #         with:
 #           firstGreeting: "Learning Lab User Me"
+
+
+name: Docker Actions
+
+on:
+  pull_request:
+    types: [labeled]
+
+jobs:
+  action:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: hello-action
+        uses: ./.github/actions/hello-world
+
+      - name: meow
+        uses: ./.github/actions/cat-facts
