--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,8 +1,9 @@
 name: "Docker Actions"
 
-on:
-  pull_request:
-    types: [labeled]
+on: [push]
+# on:
+#   pull_request:
+#     types: [labeled]
 
 jobs:
   action:
